force-app/main/default/objects/Product_Sales_Info__c/Product_Sales_Info__c.object-meta.xml
<CustomObject>
    <label>Product Info</label>
    <nameField>
        <displayFormat>PSI-{000000}</displayFormat>
        <label>Product Info Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>