force-app/main/default/objects/Product_Sales_Info__c/fields/Cost_Local__c.field-meta.xml
<CustomField>
    <fullName>Cost_Local__c</fullName>
    <label>Unit Cost (Local Currency)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>