force-app/main/default/objects/Product_Sales_Info__c/fields/Cost_USD__c.field-meta.xml
<CustomField>
    <fullName>Cost_USD__c</fullName>
    <label>Unit Cost (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>