force-app/main/default/objects/Product_Sales_Info__c/fields/Default_Sales_Unit__c.field-meta.xml
<CustomField>
    <fullName>Default_Sales_Unit__c</fullName>
    <label>Default Sales Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Unit</valueSetName>
    </valueSet>
</CustomField>