force-app/main/default/objects/Product_Sales_Info__c/fields/Delivering_Plant__c.field-meta.xml
<CustomField>
    <fullName>Delivering_Plant__c</fullName>
    <label>Delivery Plant</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Plant</valueSetName>
    </valueSet>
</CustomField>