force-app/main/default/objects/Product_Sales_Info__c/fields/Material_Subject_Assign_Group__c.field-meta.xml
<CustomField>
    <fullName>Material_Subject_Assign_Group__c</fullName>
    <label>Material Subject Assign Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Material_Subject_Assign_Group</valueSetName>
    </valueSet>
</CustomField>