force-app/main/default/objects/Product_Sales_Info__c/fields/Off_Shelves_Comment__c.field-meta.xml
<CustomField>
    <fullName>Off_Shelves_Comment__c</fullName>
    <label>Off Shelves Comment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>