force-app/main/default/objects/Product_Sales_Info__c/fields/Product_Description__c.field-meta.xml
<CustomField>
    <fullName>Product_Description__c</fullName>
    <formula>CASE( $User.LanguageLocaleKey , 
&quot;es&quot;, Product__r.Spanish_Description__c, 
&quot;zh_CN&quot;, Product__r.Chinese_Description__c,
Product__r.English_Description__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Description</label>
    <type>Text</type>
</CustomField>