force-app/main/default/objects/Product_Sales_Info__c/fields/Product_Unit__c.field-meta.xml
<CustomField>
    <fullName>Product_Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Unit</label>
    <referenceTo>Product_Unit__c</referenceTo>
    <relationshipName>Product_Sales_Info</relationshipName>
    <type>Lookup</type>
</CustomField>