force-app/main/default/objects/Product_Sales_Info__c/fields/Project_Category_Group__c.field-meta.xml
<CustomField>
    <fullName>Project_Category_Group__c</fullName>
    <label>Project Category Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Project_Category_Group</valueSetName>
    </valueSet>
</CustomField>