force-app/main/default/objects/Product_Sales_Info__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>On Shelves</fullName>
                <default>true</default>
                <label>On Shelves</label>
            </value>
            <value>
                <fullName>Off Shelves</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>