force-app/main/default/objects/Product_Sales_Info__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Product__c</columns>
    <columns>Product_Description__c</columns>
    <columns>Sales_Organization__c</columns>
    <columns>Distr_Channel__c</columns>
    <columns>Factory__c</columns>
    <columns>Delivering_Plant__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>