force-app/main/default/objects/Product_Sales_Info__c/listViews/Ar_Rainbow_B.listView-meta.xml
<ListView>
    <fullName>Ar_Rainbow_B</fullName>
    <columns>NAME</columns>
    <columns>Product__c</columns>
    <columns>Product_Description__c</columns>
    <columns>Product_Group__c</columns>
    <columns>Cost_USD__c</columns>
    <columns>Distr_Channel__c</columns>
    <columns>Factory__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Sales_Organization__c</field>
        <operation>equals</operation>
        <value>5070</value>
    </filters>
    <label>AR Rainbow B</label>
    <sharedTo>
        <group>X5070</group>
        <role>Argentina_Area_Head</role>
        <role>HQ_Commercial</role>
    </sharedTo>
</ListView>