force-app/main/default/objects/Product_Sales_Info__c/listViews/MX_Rainbow_B.listView-meta.xml
<ListView>
    <fullName>MX_Rainbow_B</fullName>
    <columns>NAME</columns>
    <columns>Product__c</columns>
    <columns>Product_Description__c</columns>
    <columns>Product_Unit__c</columns>
    <columns>Cost_USD__c</columns>
    <columns>Factory__c</columns>
    <columns>Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Factory__c</field>
        <operation>equals</operation>
        <value>3010</value>
    </filters>
    <filters>
        <field>Product__c</field>
        <operation>notContain</operation>
        <value>MX</value>
    </filters>
    <label>MX Rainbow B</label>
    <sharedTo>
        <group>X3010</group>
        <role>HQ_Commercial</role>
        <role>Mexico_Area_Head</role>
        <role>Mexico_Country_Manager</role>
        <role>Mexico_Rainbow_Agro_Logistics</role>
    </sharedTo>
</ListView>