force-app/main/default/objects/Product_Sales_Info__c/listViews/Mx_Rainbow_C.listView-meta.xml
<ListView>
    <fullName>Mx_Rainbow_C</fullName>
    <columns>NAME</columns>
    <columns>Product__c</columns>
    <columns>Product_Description__c</columns>
    <columns>Sales_Organization__c</columns>
    <columns>Distr_Channel__c</columns>
    <columns>Factory__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Sales_Organization__c</field>
        <operation>equals</operation>
        <value>3020</value>
    </filters>
    <filters>
        <field>Product__c</field>
        <operation>notContain</operation>
        <value>MX</value>
    </filters>
    <label>MX Rainbow C</label>
    <sharedTo>
        <group>X3020</group>
        <role>HQ_Commercial</role>
        <role>Mexico_Area_Head</role>
        <role>Mexico_Country_Manager</role>
        <role>Mexico_Rainbow_Agro_Logistics</role>
    </sharedTo>
</ListView>